<resources>
    <string name="app_name">Inventory</string>
    <string name="txvSignIn">Acceder</string>
    <string name="txvUser">Nombre usuario/Email</string>
    <string name="txvPassword">Contraseña</string>
    <string name="chkRemember">Recordar usuario</string>
    <string name="btnSignUp"><u>Registro</u></string>
    <string name="btnSignIn">Acceder</string>
    <string name="btnGoogleSign" translatable="false">Google</string>
    <string name="btnFacebookSign" translatable="false">Facebook</string>
    <string name="txvName">Nombre</string>
    <string name="txvDescription">Descripcion</string>
    <string name="btnChange">Cambiar estado</string>
    <string name="txvCreationDate">Fecha de creación</string>
    <string name="txvNombre">Nombre:</string>
    <string name="txvSerial">Serial:</string>
    <string name="txvVendedor">Vendedor:</string>
    <string name="txvModelo">Modelo:</string>
    <string name="txvCategoria">Categoria:</string>
    <string name="txvSubcategoria">Subcategoria:</string>
    <string name="txvTipo">Tipo:</string>
    <string name="txvDescripcion">Descripcion:</string>
    <string name="txvPrecio">Precio:</string>
    <string name="txvFechaCompra">F.Compra:</string>
    <string name="txvUrl">Url:</string>
    <string name="txvNotas">Notas:</string>
    <string name="action_save">Save</string>
    <string name="action_general_settings">Ajustes generales</string>
    <string name="action_account_settings">Ajustes de cuenta</string>
    <string name="edtName">Escriba el nombre</string>
    <string name="edtShortname">Escriba el nombre corto</string>
    <string name="edtDescription">Añada una descripcion</string>
    <string name="fragment_listdependency_delete">Eliminar dependencia</string>
    <string name="btnOk">Aceptar</string>
    <string name="btnCancel">Cancelar</string>
    <string name="ordenar_por_nombre">Ordenar por nombre</string>
    <string name="ordenar_por_id">Ordenar por id</string>

</resources>
