<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:id="@+id/android.R.id.content">

    <!-- Con android:stretchColumns hacemos que una o varias columnas separadas por comas ocupen to el espacio disponible.
    Hemos puesto la 1 para que la columna de los edittext ocupen to el espacio que pueda.-->

    <TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/txvName"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/txvName"
            android:labelFor="@+id/edtName"/>

        <EditText
            android:id="@+id/edtName"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:inputType="text"/>
    </TableRow>

    <TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/txvDescription"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/txvDescription"
            android:labelFor="@+id/edtDescription"/>

        <EditText
            android:id="@+id/edtDescription"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:inputType="text"/>
    </TableRow>

    <TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/txvCreationDate"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/txvCreationDate"
            android:labelFor="@+id/edtCreationDate"/>

        <EditText
            android:id="@+id/edtCreationDate"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:inputType="date"/>
    </TableRow>

    <TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <!-- Podemos tambien poner solamente gravity en tablerow y quitar el layout_span y el layout_gravity del button.-->

        <Button
            android:id="@+id/btnChange"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/btnChange"
            android:layout_span="2"
            android:layout_gravity="center"/>

    </TableRow>

</TableLayout>